--- a/userContent.css
+++ b/userContent.css
@@ -10,12 +10,60 @@
         --sidebaritem-bg-color: #38383D;
     }
 
-    #viewerContainer > #viewer .page > .canvasWrapper > canvas {
-        filter: grayscale(10%) invert(90%);
+    #viewerContainer > #viewer > .page > .canvasWrapper > canvas {
+       filter: grayscale(100%);
+       filter: invert(100%);
     }
 
     #sidebarContainer > #sidebarContent > #thumbnailView .thumbnailImage {
         filter: grayscale(10%) invert(90%);
         box-shadow: 0 0 0 1px hsla(0, 0%, 100%, 0.5), 0 2px 8px hsla(0, 0%, 100%, 0.3) !important;
+    }
+
+    [mozdisallowselectionprint] > body {
+        /* 
+          These rules are from 
+          resource://pdf.js/web/viewer.css
+          Line 456, the lines within:
+          @media (prefers-color-scheme: dark) { :root { } }
+        */
+        --main-color: rgba(249, 249, 250, 1);
+        --body-bg-color: rgba(42, 42, 46, 1);
+        --progressBar-color: rgba(0, 96, 223, 1);
+        --progressBar-bg-color: rgba(40, 40, 43, 1);
+        --progressBar-blend-color: rgba(20, 68, 133, 1);
+        --scrollbar-color: rgba(121, 121, 123, 1);
+        --scrollbar-bg-color: rgba(35, 35, 39, 1);
+        --toolbar-icon-bg-color: rgba(255, 255, 255, 1);
+        --toolbar-icon-hover-bg-color: rgba(255, 255, 255, 1);
+
+        --sidebar-narrow-bg-color: rgba(42, 42, 46, 0.9);
+        --sidebar-toolbar-bg-color: rgba(50, 50, 52, 1);
+        --toolbar-bg-color: rgba(56, 56, 61, 1);
+        --toolbar-border-color: rgba(12, 12, 13, 1);
+        --button-hover-color: rgba(102, 102, 103, 1);
+        --toggled-btn-color: rgba(255, 255, 255, 1);
+        --toggled-btn-bg-color: rgba(0, 0, 0, 0.3);
+        --toggled-hover-active-btn-color: rgba(0, 0, 0, 0.4);
+        --dropdown-btn-bg-color: rgba(74, 74, 79, 1);
+        --separator-color: rgba(0, 0, 0, 0.3);
+        --field-color: rgba(250, 250, 250, 1);
+        --field-bg-color: rgba(64, 64, 68, 1);
+        --field-border-color: rgba(115, 115, 115, 1);
+        --treeitem-color: rgba(255, 255, 255, 0.8);
+        --treeitem-bg-color: rgba(255, 255, 255, 0.15);
+        --treeitem-hover-color: rgba(255, 255, 255, 0.9);
+        --treeitem-selected-color: rgba(255, 255, 255, 0.9);
+        --treeitem-selected-bg-color: rgba(255, 255, 255, 0.25);
+        --thumbnail-hover-color: rgba(255, 255, 255, 0.1);
+        --thumbnail-selected-color: rgba(255, 255, 255, 0.2);
+        --doorhanger-bg-color: rgba(74, 74, 79, 1);
+        --doorhanger-border-color: rgba(39, 39, 43, 1);
+        --doorhanger-hover-color: rgba(249, 249, 250, 1);
+        --doorhanger-hover-bg-color: rgba(93, 94, 98, 1);
+        --doorhanger-separator-color: rgba(92, 92, 97, 1);
+        --dialog-button-bg-color: rgba(92, 92, 97, 1);
+        --dialog-button-hover-bg-color: rgba(115, 115, 115, 1);
+        --loading-icon: url(images/loading-dark.svg);
     }
 }
